chore: add lock pkg version

--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -149,26 +149,26 @@
     "registry": "https://registry.npmjs.org"
   },
   "dependencies": {
-    "@ast-core/escape": "^1.0.1",
+    "@ast-core/escape": "~1.0.1",
     "@babel/generator": "7.24.8",
     "@babel/parser": "7.24.8",
     "@babel/traverse": "7.24.8",
     "@babel/types": "7.24.8",
     "@csstools/postcss-is-pseudo-class": "4.0.8",
-    "@tailwindcss-mangle/shared": "^3.0.0",
-    "@weapp-core/escape": "^2.1.0",
-    "@weapp-core/regex": "^1.0.1",
-    "debug": "4.3.5",
+    "@tailwindcss-mangle/shared": "~3.0.0",
+    "@weapp-core/escape": "~2.1.0",
+    "@weapp-core/regex": "~1.0.1",
+    "debug": "~4.3.5",
     "htmlparser2": "9.1.0",
     "loader-utils": "2.0.4",
     "lru-cache": "10.4.3",
     "magic-string": "0.30.10",
     "md5": "2.3.0",
-    "postcss": "8.4.39",
-    "postcss-rem-to-responsive-pixel": "^6.0.1",
-    "postcss-selector-parser": "6.1.1",
-    "semver": "7.6.2",
-    "tailwindcss-patch": "^3.0.2",
+    "postcss": "~8.4.39",
+    "postcss-rem-to-responsive-pixel": "~6.0.1",
+    "postcss-selector-parser": "~6.1.1",
+    "semver": "~7.6.2",
+    "tailwindcss-patch": "~3.0.2",
     "webpack-sources": "3.2.3"
   }
 }
