--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -150,11 +150,11 @@
   },
   "dependencies": {
     "@ast-core/escape": "~1.0.1",
-    "@babel/generator": "7.24.8",
-    "@babel/parser": "7.24.8",
-    "@babel/traverse": "7.24.8",
-    "@babel/types": "7.24.8",
-    "@csstools/postcss-is-pseudo-class": "4.0.8",
+    "@babel/generator": "~7.24.8",
+    "@babel/parser": "~7.24.8",
+    "@babel/traverse": "~7.24.8",
+    "@babel/types": "~7.24.8",
+    "@csstools/postcss-is-pseudo-class": "~4.0.8",
     "@tailwindcss-mangle/shared": "~3.0.0",
     "@weapp-core/escape": "~2.1.0",
     "@weapp-core/regex": "~1.0.1",
@@ -168,7 +168,7 @@
     "postcss-rem-to-responsive-pixel": "~6.0.1",
     "postcss-selector-parser": "~6.1.1",
     "semver": "~7.6.2",
-    "tailwindcss-patch": "3.1.0-alpha.1",
+    "tailwindcss-patch": "4.0.0-alpha.1",
     "webpack-sources": "3.2.3"
   }
 }
