--- a/packages/weapp-tailwindcss/tsconfig.json
+++ b/packages/weapp-tailwindcss/tsconfig.json
@@ -27,13 +27,7 @@
     ],
     "strictPropertyInitialization": false,
     "outDir": "dist",
-    "allowSyntheticDefaultImports": true,
-    "plugins": [
-      {
-        "transform": "typescript-transform-paths",
-        "afterDeclarations": true
-      }
-    ]
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "src/**/*",
