--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss",
-  "version": "3.4.0-alpha.0",
+  "version": "3.4.0-alpha.1",
   "description": "把 tailwindcss 原子化样式思想，带给小程序开发者们! bring tailwindcss to miniprogram developers!",
   "author": "SonOfMagic <qq1324318532@gmail.com>",
   "license": "MIT",
@@ -122,7 +122,7 @@
   },
   "scripts": {
     "dev": "tsup --watch --sourcemap",
-    "build": "tsup",
+    "build": "pnpm clean && tsup",
     "build:tsc": "cross-env NODE_ENV=development tsc --build tsconfig.json",
     "build:cli": "cd plugins/cli && pnpm run build",
     "dts": "tsc --emitDeclarationOnly -p tsconfig.dts.json",
