--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -121,8 +121,8 @@
     "node": ">=16.6.0"
   },
   "scripts": {
-    "dev": "tsup --watch --sourcemap",
-    "build": "pnpm clean && tsup",
+    "dev": "pnpm clean && pnpm dts && cross-env NODE_ENV=development rollup -c rollup.config.ts --configPlugin typescript -w",
+    "build": "pnpm clean && cross-env NODE_ENV=production rollup -c rollup.config.ts --configPlugin typescript && pnpm dts",
     "build:tsc": "cross-env NODE_ENV=development tsc --build tsconfig.json",
     "build:cli": "cd plugins/cli && pnpm run build",
     "dts": "tsc --emitDeclarationOnly -p tsconfig.dts.json",
