--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -85,13 +85,13 @@
     "style-loader": "3.3.4",
     "stylelint": "^16.6.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.6",
     "tailwindcss-patch": "^3.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.4.5",
     "vue-loader": "^15.11.1",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.7",
+    "weapp-tailwindcss": "^3.4.0-alpha.2",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.92.0"
   },
