--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -52,7 +52,7 @@
     "@tarojs/plugin-platform-h5": "3.6.31",
     "@tarojs/runtime": "3.6.31",
     "@tarojs/taro": "3.6.31",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.6",
     "vue": "^3.3.4"
   },
   "devDependencies": {
@@ -84,7 +84,7 @@
     "unplugin-vue-components": "^0.27.0",
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.7",
+    "weapp-tailwindcss": "^3.4.0-alpha.2",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.90.3"
   },
