--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -89,13 +89,13 @@
     "postcss-rpx-transform": "^1.0.1",
     "sass": "^1.71.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.6",
     "tailwindcss-patch": "^3.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.4.2",
     "vite": "5.2.8",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.7",
+    "weapp-tailwindcss": "^3.4.0-alpha.2",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "packageManager": "yarn@1.22.22"
