--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "defu": "^6.1.4",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.6"
   },
   "devDependencies": {
     "@weapp-tailwindcss/cli": "^1.0.8",
@@ -22,7 +22,7 @@
     "tailwindcss-patch": "^3.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.7",
+    "weapp-tailwindcss": "^3.4.0-alpha.2",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "packageManager": "yarn@1.22.22"
