--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss",
-  "version": "3.4.0-alpha.2",
+  "version": "3.4.0-alpha.3",
   "description": "把 tailwindcss 原子化样式思想，带给小程序开发者们! bring tailwindcss to miniprogram developers!",
   "author": "SonOfMagic <qq1324318532@gmail.com>",
   "license": "MIT",
@@ -167,7 +167,7 @@
     "postcss-rem-to-responsive-pixel": "~6.0.1",
     "postcss-selector-parser": "~6.1.1",
     "semver": "~7.6.2",
-    "tailwindcss-patch": "4.0.0-alpha.1",
+    "tailwindcss-patch": "~4.0.0",
     "webpack-sources": "3.2.3"
   }
 }
