--- a/demo/native-ts/package.json
+++ b/demo/native-ts/package.json
@@ -20,7 +20,7 @@
     "tailwindcss-patch": "^4.0.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.4.0-alpha.3",
+    "weapp-tailwindcss": "^3.4.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "packageManager": "yarn@1.22.22"
