--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -86,7 +86,7 @@
     "terser-webpack-plugin": "^5.3.10",
     "typescript": "~5.5.3",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.4.0-alpha.3",
+    "weapp-tailwindcss": "^3.4.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.93.0",
     "webpack-chain": "^6.5.1"
