--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@types/babel__traverse": "^7.20.6",
     "@types/debug": "^4.1.12",
     "@types/diff": "^5.2.1",
+    "@types/dlv": "^1.1.4",
     "@types/fs-extra": "^11.0.4",
     "@types/get-value": "^3.0.5",
     "@types/gulp": "^4.0.17",
@@ -142,6 +143,7 @@
     "defu": "6.1.4",
     "del": "^7.1.0",
     "diff": "^5.2.0",
+    "dlv": "^1.1.3",
     "domhandler": "^5.0.3",
     "eslint": "9.7.0",
     "eslint-config-icebreaker": "^1.2.3",
