feat(weapp): commit statusBarHeight

--- a/tailwindcss-weapp/package.json
+++ b/tailwindcss-weapp/package.json
@@ -56,6 +56,8 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-4020320240708001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4020320240708001",
     "@vue/shared": "^3.3.11",
+    "clipboard": "^2.0.11",
+    "dayjs": "^1.11.12",
     "pinia": "~2.1.7",
     "tailwindcss-core-plugins-extractor": "^0.2.0",
     "uni-app-mp-html": "^2.5.0",
@@ -70,6 +72,7 @@
     "@dcloudio/vite-plugin-uni": "3.0.0-4020320240708001",
     "@egoist/tailwindcss-icons": "^1.8.1",
     "@icebreakers/eslint-config": "^0.3.12",
+    "@iconify-json/logos": "^1.1.43",
     "@iconify-json/mdi": "^1.1.67",
     "@iconify-json/svg-spinners": "^1.1.2",
     "@rollup/plugin-commonjs": "^26.0.1",
