feat(weapp): commit detail page

--- a/tailwindcss-weapp/package.json
+++ b/tailwindcss-weapp/package.json
@@ -71,8 +71,10 @@
     "@dcloudio/vite-plugin-uni": "3.0.0-4020320240708001",
     "@egoist/tailwindcss-icons": "^1.8.1",
     "@icebreakers/eslint-config": "^0.3.13",
+    "@iconify-json/ci": "^1.1.13",
     "@iconify-json/logos": "^1.1.43",
     "@iconify-json/mdi": "^1.1.67",
+    "@iconify-json/ri": "^1.1.21",
     "@iconify-json/svg-spinners": "^1.1.2",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@types/node": "^20.14.10",
