feat: init weapp-vite utils

--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@ast-grep/napi": "^0.25.3",
     "@babel/core": "^7.24.9",
     "@eslint/config-inspector": "^0.5.2",
-    "@icebreakers/eslint-config": "^0.3.13",
+    "@icebreakers/eslint-config": "^0.3.14",
     "@icebreakers/readme": "0.1.0",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-commonjs": "^26.0.1",
@@ -101,6 +101,7 @@
     "@types/debug": "^4.1.12",
     "@types/diff": "^5.2.1",
     "@types/dlv": "^1.1.4",
+    "@types/express": "^4.17.21",
     "@types/fs-extra": "^11.0.4",
     "@types/get-value": "^3.0.5",
     "@types/gulp": "^4.0.17",
@@ -150,6 +151,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "execa": "^9.3.0",
+    "express": "^4.19.2",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "get-value": "^3.0.1",
