--- a/packages/weapp-vite/package.json
+++ b/packages/weapp-vite/package.json
@@ -1,8 +1,9 @@
 {
   "name": "weapp-vite",
+  "type": "module",
   "version": "0.0.0",
   "description": "WIP",
-  "author": "",
+  "author": "SonOfMagic <qq1324318532@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -12,21 +13,33 @@
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
   },
   "keywords": [],
-  "main": "index.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
     "dev": "tsup --watch --sourcemap",
     "build": "tsup",
-    "release": "node scripts/release.js"
+    "release": "node scripts/release.js",
+    "test:dev": "vitest",
+    "test": "vitest run"
   },
   "peerDependencies": {
     "vite": ">=2.6.0"
   },
   "dependencies": {
     "@rollup/pluginutils": "^5.1.0",
-    "fast-glob": "^3.3.2"
+    "fast-glob": "^3.3.2",
+    "fs-extra": "^11.2.0"
   },
   "publishConfig": {
     "access": "public",
