--- a/packages/weapp-vite/tsconfig.json
+++ b/packages/weapp-vite/tsconfig.json
@@ -1,8 +1,18 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "target": "ESNext",
+    "baseUrl": ".",
     "module": "ESNext",
     "moduleResolution": "node",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
+    "types": [
+      "vitest/globals"
+    ],
     "strict": true,
     "declaration": true,
     "outDir": "./dist",
@@ -10,5 +20,8 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "test"
+  ]
 }
