chore: try fix windows ci error

--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "@types/node": "^20.14.12",
     "@types/semver": "^7.5.8",
     "@types/set-value": "^4.0.3",
+    "@types/uuid": "^10.0.0",
     "@types/vinyl": "^2.0.12",
     "@types/vinyl-fs": "^3.0.5",
     "@types/webpack": "^5.28.5",
@@ -193,6 +194,7 @@
     "typescript": "5.4.5",
     "typescript-transform-paths": "^3.4.7",
     "unbuild": "^2.0.0",
+    "uuid": "^10.0.0",
     "vinyl": "^3.0.0",
     "vinyl-fs": "^4.0.0",
     "vite": "^5.3.5",
