chore: init vite app skyline

--- a/packages/weapp-vite/package.json
+++ b/packages/weapp-vite/package.json
@@ -23,6 +23,9 @@
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "bin": {
+    "weapp-vite": "bin/weapp-vite.js"
+  },
   "files": [
     "dist"
   ],
