--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/model-viewer": "^3.5.0",
     "echarts": "^5.5.1",
     "vue": "^3.4.34",
-    "vue-echarts": "^6.7.3"
+    "vue-echarts": "^6.7.3",
+    "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "4.0.0-alpha.17",
