--- a/apps/web-postcss7-compat/package.json
+++ b/apps/web-postcss7-compat/package.json
@@ -2,6 +2,9 @@
   "name": "@native-app/postcss7-compat",
   "version": "1.0.0",
   "description": "",
+  "author": "",
+  "license": "ISC",
+  "keywords": [],
   "main": "index.js",
   "scripts": {
     "start": "node ./index.js",
@@ -9,16 +12,13 @@
     "build:babel": "node ./index.js",
     "postinstall": "weapp-tw patch"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "autoprefixer": "^9",
-    "postcss": "^8.4.40",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "weapp-tailwindcss": "workspace:^"
-  },
   "dependencies": {
     "tailwindcss-patch": "^4.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^9",
+    "postcss7": "npm:postcss@7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "weapp-tailwindcss": "workspace:^"
   }
 }
