--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "lint:fix": "eslint . --fix",
     "lint:view": "npx @eslint/config-inspector",
     "changeset": "changeset",
-    "publish-packages": "turbo run build lint test && changeset version && changeset publish"
+    "publish-packages": "turbo run build lint test && changeset version && changeset publish",
+    "run:watch": "tsx scripts/watcher"
   },
   "publishConfig": {
     "access": "public",
@@ -143,14 +144,14 @@
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-to-tailwindcss-plugin": "^0.3.0",
-    "debug": "4.3.5",
+    "debug": "4.3.6",
     "dedent": "^1.5.3",
     "defu": "6.1.4",
     "del": "^7.1.0",
     "diff": "^5.2.0",
     "dlv": "^1.1.3",
     "domhandler": "^5.0.3",
-    "eslint": "9.7.0",
+    "eslint": "9.8.0",
     "eslint-config-icebreaker": "^1.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -176,7 +177,7 @@
     "postcss-scss": "^4.0.9",
     "prettier": "^3.3.3",
     "promisify-loader-runner": "^1.0.1",
-    "rollup": "^4.19.0",
+    "rollup": "^4.19.1",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.77.8",
     "semver": "7.6.3",
