feat(weapp-vite): add scanEntries function

--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "css-to-tailwindcss-plugin": "^0.3.0",
     "debug": "4.3.6",
     "dedent": "^1.5.3",
+    "deep-object-diff": "^1.1.9",
     "defu": "6.1.4",
     "del": "^7.1.0",
     "diff": "^5.2.0",
@@ -164,6 +165,7 @@
     "gulp-postcss": "^10.0.0",
     "html-loader": "^5.1.0",
     "js-beautify": "^1.15.1",
+    "just-diff": "^6.0.2",
     "klaw": "^4.1.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.9.0",
