--- a/packages/weapp-vite/package.json
+++ b/packages/weapp-vite/package.json
@@ -38,6 +38,7 @@
     "debug": "^4.3.6",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
+    "klaw": "^4.1.0",
     "picocolors": "^1.0.1"
   },
   "publishConfig": {
