--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "format:test": "prettier --check \"test/**/*.test.{ts,js}\" -w",
     "ls:pack": "npm pack --dry-run",
     "cli:patch": "node bin/weapp-tailwindcss.js patch",
-    "prepare": "ts-patch install -s",
+    "prepare": "husky",
     "release": "bumpp",
     "css-build": "css2plugin build css-plugin.css css-plugin-scss.scss --cwd test/fixtures/css",
     "css-build-out": "css2plugin build css-plugin.css css-plugin-scss.scss --cwd test/fixtures/css --out tw-plugins",
@@ -79,7 +79,7 @@
     "lint:fix": "eslint . --fix",
     "lint:view": "npx @eslint/config-inspector",
     "changeset": "changeset",
-    "publish-packages": "turbo run build lint test && changeset version && changeset publish",
+    "publish-packages": "pnpm build && pnpm test && changeset version && changeset publish",
     "run:watch": "tsx scripts/watcher"
   },
   "publishConfig": {
@@ -90,6 +90,8 @@
     "@ast-grep/napi": "^0.25.4",
     "@babel/core": "^7.24.9",
     "@changesets/cli": "^2.27.7",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@commitlint/types": "^19.0.3",
     "@eslint/config-inspector": "^0.5.2",
     "@icebreakers/eslint-config": "^0.3.14",
     "@icebreakers/readme": "0.1.0",
@@ -164,9 +166,11 @@
     "gulp": "^5.0.0",
     "gulp-postcss": "^10.0.0",
     "html-loader": "^5.1.0",
+    "husky": "^9.1.3",
     "js-beautify": "^1.15.1",
     "just-diff": "^6.0.2",
     "klaw": "^4.1.0",
+    "lint-staged": "^15.2.7",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.9.0",
     "miniprogram-automator": "^0.12.1",
