--- a/packages/weapp-vite/package.json
+++ b/packages/weapp-vite/package.json
@@ -39,6 +39,7 @@
     "debug": "^4.3.6",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
+    "is-css-request": "^1.0.1",
     "klaw": "^4.1.0",
     "picocolors": "^1.0.1"
   },
