--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "build": "turbo run build --filter=./packages/* && turbo run build --filter=./plugins/*",
+    "build": "turbo run build --filter=./packages/* --filter=./@weapp-core/* && turbo run build --filter=./plugins/*",
     "test": "vitest run",
     "test:plugins": "vitest run --coverage.enabled --coverage.all=false --project=@weapp-tailwindcss/*",
     "test:cli": "vitest run --coverage.enabled --coverage.all=false --project=@weapp-tailwindcss/cli",
