--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@native-app/js",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "author": "",
   "license": "ISC",
