--- a/apps/web-postcss7-compat/package.json
+++ b/apps/web-postcss7-compat/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@native-app/postcss7-compat",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "author": "",
   "license": "ISC",
