chore(apps): add "private": true field

--- a/apps/vite-native-ts-skyline/package.json
+++ b/apps/vite-native-ts-skyline/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vite-native-ts-skyline",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "author": "",
   "license": "",
