--- a/package.json
+++ b/package.json
@@ -205,6 +205,7 @@
     "vinyl": "^3.0.0",
     "vinyl-fs": "^4.0.0",
     "vite": "^5.3.5",
+    "vite-plugin-inspect": "^0.8.5",
     "vitest": "^2.0.5",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.93.0",
