--- a/@weapp-core/shared/tsconfig.json
+++ b/@weapp-core/shared/tsconfig.json
@@ -2,11 +2,13 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "moduleResolution": "Bundler",
     "paths": {
       "@/*": [
         "src/*"
       ]
-    }
+    },
+    "esModuleInterop": true
   },
   "include": [
     "src",
