--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/pluginutils": "^5.1.0",
     "@tsconfig/recommended": "^1.0.7",
     "@types/babel__generator": "^7.6.8",
     "@types/babel__traverse": "^7.20.6",
@@ -137,7 +138,7 @@
     "@vitest/ui": "^2.0.5",
     "@weapp-tailwindcss/cli": "workspace:*",
     "anymatch": "^3.1.3",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
     "bumpp": "^9.4.2",
     "chokidar": "^3.6.0",
@@ -170,7 +171,7 @@
     "js-beautify": "^1.15.1",
     "just-diff": "^6.0.2",
     "klaw": "^4.1.0",
-    "lint-staged": "^15.2.7",
+    "lint-staged": "^15.2.8",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.9.0",
     "miniprogram-automator": "^0.12.1",
@@ -183,7 +184,7 @@
     "postcss-scss": "^4.0.9",
     "prettier": "^3.3.3",
     "promisify-loader-runner": "^1.0.1",
-    "rollup": "^4.19.2",
+    "rollup": "^4.20.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.77.8",
     "semver": "7.6.3",
