--- a/@weapp-core/init/package.json
+++ b/@weapp-core/init/package.json
@@ -10,6 +10,9 @@
   "exports": {
     ".": "./src/index.ts"
   },
+  "main": "./src/index.ts",
+  "module": "./src/index.ts",
+  "types": "./src/index.ts",
   "files": [
     "dist"
   ],
