chore(vite): add fs-extra as dep

--- a/@weapp-core/init/package.json
+++ b/@weapp-core/init/package.json
@@ -38,6 +38,7 @@
     "types": "./dist/index.d.ts"
   },
   "dependencies": {
-    "@weapp-core/shared": "workspace:^"
+    "@weapp-core/shared": "workspace:^",
+    "fs-extra": "^11.2.0"
   }
 }
