--- a/package.json
+++ b/package.json
@@ -71,14 +71,17 @@
     "ls:pack": "npm pack --dry-run",
     "cli:patch": "node bin/weapp-tailwindcss.js patch",
     "prepare": "husky",
-    "release": "bumpp",
     "css-build": "css2plugin build css-plugin.css css-plugin-scss.scss --cwd test/fixtures/css",
     "css-build-out": "css2plugin build css-plugin.css css-plugin-scss.scss --cwd test/fixtures/css --out tw-plugins",
     "-------": "-----------",
+    "release": "changeset",
+    "prerelease": "changeset pre enter alpha",
+    "prerelease:beta": "changeset pre enter beta",
+    "prerelease:rc": "changeset pre enter rc",
+    "--------": "----------------",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:view": "npx @eslint/config-inspector",
-    "changeset": "changeset",
     "publish-packages": "pnpm build && pnpm test && changeset version && changeset publish",
     "run:watch": "tsx scripts/watcher"
   },
@@ -140,7 +143,6 @@
     "anymatch": "^3.1.3",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
-    "bumpp": "^9.4.2",
     "chokidar": "^3.6.0",
     "ci-info": "^4.0.0",
     "colorette": "^2.0.20",
