--- a/apps/vite-native/package.json
+++ b/apps/vite-native/package.json
@@ -9,7 +9,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "weapp-vite dev",
-    "build": "weapp-vite build"
+    "build": "weapp-vite build",
+    "open": "weapp open -p"
   },
   "devDependencies": {
     "weapp-vite": "workspace:*"
