--- a/apps/vite-native-skyline/package.json
+++ b/apps/vite-native-skyline/package.json
@@ -12,6 +12,7 @@
     "build": "weapp-vite build"
   },
   "devDependencies": {
+    "weapp-ide-cli": "workspace:*",
     "weapp-vite": "workspace:*"
   }
 }
