--- a/apps/vite-native-ts-skyline/package.json
+++ b/apps/vite-native-ts-skyline/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "miniprogram-api-typings": "^3.12.2",
+    "weapp-ide-cli": "workspace:*",
     "weapp-vite": "workspace:*"
   }
 }
