--- a/apps/native-ts-skyline/package.json
+++ b/apps/native-ts-skyline/package.json
@@ -15,6 +15,7 @@
     "@weapp-tailwindcss/cli": "workspace:*",
     "miniprogram-api-typings": "^3.12.2",
     "tailwindcss": "^3.4.7",
+    "weapp-ide-cli": "workspace:*",
     "weapp-tailwindcss": "workspace:*"
   }
 }
