--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -23,7 +23,7 @@
     "@weapp-tailwindcss/cli": "workspace:*",
     "cross-env": "^7.0.3",
     "tailwindcss": "^3.4.7",
-    "weapp-ide-cli": "^1.0.1",
+    "weapp-ide-cli": "workspace:*",
     "weapp-tailwindcss": "workspace:*"
   }
 }
