feat(vite): commit init package

--- a/packages/weapp-vite/package.json
+++ b/packages/weapp-vite/package.json
@@ -14,7 +14,8 @@
   },
   "keywords": [],
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./config": "./src/config.ts"
   },
   "bin": {
     "weapp-vite": "src/bin.js"
@@ -52,6 +53,11 @@
         "types": "./dist/index.d.ts",
         "import": "./dist/index.js",
         "require": "./dist/index.cjs"
+      },
+      "./config": {
+        "types": "./dist/config.d.ts",
+        "import": "./dist/config.js",
+        "require": "./dist/config.cjs"
       }
     },
     "main": "./dist/index.cjs",
