chore(deps): upgrade

--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "demo:sync-dist": "node scripts/demo/copy-dist.js",
     "demo:del-dist": "node scripts/demo/del-dist.js",
     "sync": "cnpm sync weapp-tailwindcss-webpack-plugin weapp-tailwindcss weapp-tw @weapp-tailwindcss/cli @weapp-tailwindcss/typography",
-    "generate:readme": "ts-node scripts/readme/write.ts",
+    "generate:readme": "tsx scripts/readme/write.ts",
     "format": "prettier --check \"src/**/*.{ts,js}\" -w",
     "format:test": "prettier --check \"test/**/*.test.{ts,js}\" -w",
     "ls:pack": "npm pack --dry-run",
@@ -193,22 +193,19 @@
     "semver": "7.6.3",
     "set-value": "^4.1.0",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.7",
+    "tailwindcss": "^3.4.8",
     "ts-morph": "^23.0.0",
-    "ts-node": "^10.9.2",
-    "ts-patch": "^3.2.1",
     "tsd": "^0.31.1",
     "tslib": "^2.6.3",
     "tsup": "^8.2.4",
     "tsx": "^4.16.5",
     "turbo": "^2.0.12",
-    "typescript": "5.4.5",
-    "typescript-transform-paths": "^3.4.9",
+    "typescript": "5.5.4",
     "unbuild": "^2.0.0",
     "uuid": "^10.0.0",
     "vinyl": "^3.0.0",
     "vinyl-fs": "^4.0.0",
-    "vite": "^5.3.5",
+    "vite": "^5.4.0",
     "vite-plugin-inspect": "^0.8.5",
     "vitest": "^2.0.5",
     "weapp-tailwindcss-children": "^0.1.0",
