--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -122,10 +122,9 @@
   },
   "scripts": {
     "dev": "pnpm clean && pnpm dts && cross-env NODE_ENV=development rollup -c rollup.config.ts --configPlugin typescript -w",
-    "build": "pnpm clean && cross-env NODE_ENV=production rollup -c rollup.config.ts --configPlugin typescript && pnpm dts",
+    "build": "pnpm clean && cross-env NODE_ENV=production rollup -c rollup.config.ts --configPlugin typescript",
     "build:tsc": "cross-env NODE_ENV=development tsc --build tsconfig.json",
     "build:cli": "cd plugins/cli && pnpm run build",
-    "dts": "tsc --emitDeclarationOnly -p tsconfig.dts.json",
     "test": "npm run postinstall && vitest run",
     "test:dev": "vitest",
     "test:ui": "vitest --ui",
@@ -135,11 +134,10 @@
     "sync": "cnpm sync weapp-tailwindcss-webpack-plugin weapp-tailwindcss weapp-tw",
     "ls:pack": "npm pack --dry-run",
     "cli:patch": "node bin/weapp-tailwindcss.js patch",
-    "prepare": "ts-patch install -s",
     "release": "node scripts/release.js",
     "generate:readme": "tsx scripts/readme/write.ts",
     "lint": "eslint .",
-    "lint:fix": "eslint ./test --fix",
+    "lint:fix": "eslint ./src --fix",
     "-------": "-----------",
     "postinstall": "node bin/weapp-tailwindcss.js patch"
   },
