chore: bump version

--- a/package.json
+++ b/package.json
@@ -75,10 +75,10 @@
     "css-build-out": "css2plugin build css-plugin.css css-plugin-scss.scss --cwd test/fixtures/css --out tw-plugins",
     "-------": "-----------",
     "release": "changeset",
-    "prerelease": "changeset pre enter alpha",
-    "prerelease:beta": "changeset pre enter beta",
-    "prerelease:rc": "changeset pre enter rc",
-    "prerelease:exit": "changeset pre exit",
+    "pr": "changeset pre enter alpha",
+    "pr:beta": "changeset pre enter beta",
+    "pr:rc": "changeset pre enter rc",
+    "pr:exit": "changeset pre exit",
     "--------": "----------------",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
