feat(weapp-vite): add subPackage support

--- a/apps/vite-native/app.json
+++ b/apps/vite-native/app.json
@@ -7,6 +7,30 @@
     "navigationBarTitleText": "Weixin",
     "navigationBarBackgroundColor": "#ffffff"
   },
+  "usingComponents": {
+    "navigation-bar": "/components/navigation-bar/navigation-bar"
+  },
+  "subPackages": [
+    {
+      "root": "packageA",
+      "name": "pack1",
+      "pages": [
+        "pages/cat",
+        "pages/dog"
+      ],
+      "entry": "index.js"
+    },
+    {
+      "root": "packageB",
+      "name": "pack2",
+      "pages": [
+        "pages/apple",
+        "pages/banana"
+      ],
+      "entry": "index.ts",
+      "independent": true
+    }
+  ],
   "style": "v2",
   "componentFramework": "glass-easel",
   "sitemapLocation": "sitemap.json",
