feat(weapp-vite): via weapp-tailwindcss

--- a/apps/vite-native/app.json
+++ b/apps/vite-native/app.json
@@ -27,7 +27,7 @@
         "pages/apple",
         "pages/banana"
       ],
-      "entry": "index.js",
+      "entry": "index.ts",
       "independent": true
     }
   ],
