--- a/packages/weapp-vite/package.json
+++ b/packages/weapp-vite/package.json
@@ -37,7 +37,6 @@
     "@weapp-core/init": "workspace:^",
     "@weapp-core/logger": "workspace:^",
     "@weapp-core/shared": "workspace:^",
-    "chokidar": "^3.6.0",
     "commander": "^12.1.0",
     "debug": "^4.3.6",
     "fast-glob": "^3.3.2",
@@ -46,6 +45,7 @@
     "magic-string": "^0.30.11",
     "micromatch": "^4.0.7",
     "pathe": "^1.1.2",
+    "pkg-types": "^1.1.3",
     "weapp-ide-cli": "workspace:^"
   },
   "publishConfig": {
