--- a/apps/vite-native-ts-skyline/package.json
+++ b/apps/vite-native-ts-skyline/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vite-native-ts-skyline",
+  "type": "module",
   "version": "1.0.0",
   "private": true,
   "description": "",
@@ -8,7 +9,9 @@
   "keywords": [],
   "scripts": {
     "dev": "weapp-vite dev",
-    "build": "weapp-vite build"
+    "build": "weapp-vite build",
+    "open": "weapp-vite open",
+    "build-npm": "weapp-vite build-npm"
   },
   "devDependencies": {
     "miniprogram-api-typings": "^3.12.3",
