--- a/@weapp-core/shared/package.json
+++ b/@weapp-core/shared/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@weapp-core/shared",
   "type": "module",
-  "version": "1.0.0-alpha.4",
+  "version": "1.0.0",
   "description": "@weapp-core/shared",
   "author": "",
   "license": "ISC",
