--- a/packages/weapp-vite/package.json
+++ b/packages/weapp-vite/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weapp-vite",
   "type": "module",
-  "version": "1.0.0-alpha.4",
+  "version": "1.0.0",
   "description": "WIP",
   "author": "SonOfMagic <qq1324318532@gmail.com>",
   "license": "MIT",
