chore: bump version

--- a/@weapp-core/logger/package.json
+++ b/@weapp-core/logger/package.json
@@ -23,7 +23,8 @@
     "test:dev": "vitest",
     "release": "pnpm publish",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "sync": "cnpm sync @weapp-core/logger"
   },
   "publishConfig": {
     "exports": {
