--- a/demo/native-ts/package.json
+++ b/demo/native-ts/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "echo build",
-    "build:babel": "echo build:babel"
+    "build": "weapp-vite build",
+    "build:babel": "echo build:babel",
+    "dev": "weapp-vite dev",
+    "open": "weapp-vite open",
+    "build-npm": "weapp-vite build-npm"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +24,9 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss": "^3.4.0",
-    "weapp-tailwindcss-children": "^0.1.0"
+    "weapp-tailwindcss-children": "^0.1.0",
+    "weapp-vite": "^1.0.0"
   },
-  "packageManager": "yarn@1.22.22"
+  "packageManager": "yarn@1.22.22",
+  "type": "module"
 }
