chore: change @weapp-core/init

--- a/@weapp-core/init/package.json
+++ b/@weapp-core/init/package.json
@@ -39,6 +39,7 @@
     "types": "./dist/index.d.ts"
   },
   "dependencies": {
+    "@weapp-core/logger": "workspace:^",
     "@weapp-core/shared": "workspace:^",
     "fs-extra": "^11.2.0"
   }
