--- a/website-weapp-vite/package.json
+++ b/website-weapp-vite/package.json
@@ -12,6 +12,7 @@
     "preview": "vitepress preview"
   },
   "devDependencies": {
+    "@shikijs/vitepress-twoslash": "^1.12.1",
     "vitepress": "^1.3.2"
   }
 }
