--- a/demo/taro-app-v4/package.json
+++ b/demo/taro-app-v4/package.json
@@ -10,6 +10,9 @@
     "framework": "React"
   },
   "scripts": {
+    "dev": "npm run dev:weapp",
+    "build": "npm run build:weapp",
+    "build:babel": "npm run build:weapp",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
@@ -64,6 +67,7 @@
     "@tarojs/vite-runner": "4.0.4",
     "@types/react": "^18.0.0",
     "@vitejs/plugin-react": "^4.3.0",
+    "@weapp-tailwindcss/cli": "^1.0.8",
     "autoprefixer": "^10.4.20",
     "babel-preset-taro": "4.0.4",
     "eslint": "^8.57.0",
@@ -71,14 +75,20 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.4.0",
     "postcss": "^8.4.41",
+    "postcss-rem-to-responsive-pixel": "^6.0.1",
+    "postcss-rpx-transform": "^1.0.1",
     "react-refresh": "^0.14.0",
     "sass": "^1.75.0",
     "stylelint": "^16.4.0",
+    "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.10",
+    "tailwindcss-patch": "^4.0.0",
+    "tailwindcss-rem2px-preset": "^1.0.3",
     "terser": "^5.30.4",
     "typescript": "^5.4.5",
     "vite": "^4.2.0",
     "weapp-ide-cli": "^2.0.0",
-    "weapp-tailwindcss": "^3.4.0"
+    "weapp-tailwindcss": "^3.4.0",
+    "weapp-tailwindcss-children": "^0.1.0"
   }
 }
