--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
+    "@babel/plugin-syntax-decorators": "^7.24.7",
     "@tarojs/cli": "3.6.31",
     "@tarojs/mini-runner": "3.6.31",
     "@tarojs/webpack5-runner": "^3.6.31",
