--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -52,11 +52,12 @@
     "@tarojs/plugin-platform-h5": "3.6.31",
     "@tarojs/runtime": "3.6.31",
     "@tarojs/taro": "3.6.31",
-    "tailwindcss": "^3.4.6",
+    "tailwindcss": "^3.4.10",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
+    "@babel/plugin-syntax-decorators": "^7.24.7",
     "@tarojs/cli": "3.6.31",
     "@tarojs/mini-runner": "3.6.31",
     "@tarojs/webpack5-runner": "^3.6.31",
@@ -83,7 +84,7 @@
     "typescript": "~5.4.5",
     "unplugin-vue-components": "^0.27.0",
     "vue-loader": "^17.2.2",
-    "weapp-ide-cli": "^1.0.1",
+    "weapp-ide-cli": "^2.0.0",
     "weapp-tailwindcss": "^3.4.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.90.3"
