--- a/website-weapp-vite/package.json
+++ b/website-weapp-vite/package.json
@@ -2,6 +2,7 @@
   "name": "website-weapp-vite",
   "type": "module",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "author": "",
   "license": "ISC",
