--- a/.github/ISSUE_TEMPLATE/bug_report_weapp-vite.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report_weapp-vite.yml
@@ -1,7 +1,7 @@
-name: "\U0001F41E weapp-tailwindcss 汇报Bug (Bug report)"
+name: "\U0001F41E weapp-vite 汇报Bug (Bug report)"
 description: 汇报Bug并提供测试用例
-title: "[Bug(weapp-tailwindcss)]: "
-labels: ["bug(weapp-tailwindcss)"]
+title: "[Bug(weapp-vite)]: "
+labels: ["bug(weapp-vite)"]
 assignees:
   - sonofmagic
 body:
@@ -12,7 +12,7 @@ body:
 
         此表格仅用于提交错误报告。如果您有使用问题, 或者你不确定这是否真的是一个错误，请确保：
 
-        - [x] 已经在 [weapp-tw.icebreaker.top](https://weapp-tw.icebreaker.top/) 文档网站中搜索过相关的解决方案
+        - [x] 已经在 [vite.icebreaker.top](https://vite.icebreaker.top/) 文档网站中搜索过相关的解决方案
         - [x] 已经在 Github 的 [issues](https://github.com/sonofmagic/weapp-tailwindcss/issues) 中搜索过相关的问题
 
         如果您发现最新版本中仍然存在旧的、已解决的问题，
@@ -20,20 +20,20 @@ body:
   - type: input
     id: version
     attributes:
-      label: weapp-tailwindcss 版本
+      label: weapp-vite 版本
     validations:
       required: true
-  - type: input
-    id: platform
-    attributes:
-      label: 框架 & 小程序平台
-      description: |
-        在什么框架, 编译到的什么小程序平台, 出现了问题? 例如:
-        - uni-app vue3 vite 编译到 qq 小程序
-        - taro react 编译到 微信小程序
-      placeholder: taro vue2 编译到 京东小程序
-    validations:
-      required: true
+  # - type: input
+  #   id: platform
+  #   attributes:
+  #     label: 框架 & 小程序平台
+  #     description: |
+  #       在什么框架, 编译到的什么小程序平台, 出现了问题? 例如:
+  #       - uni-app vue3 vite 编译到 qq 小程序
+  #       - taro react 编译到 微信小程序
+  #     placeholder: taro vue2 编译到 京东小程序
+  #   validations:
+  #     required: true
   - type: input
     id: reproduction-link
     attributes:
